<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuItemAddNewCategory"
        android:icon="@drawable/ic_add_circle_white_24dp"
        android:orderInCategory="1"
        android:title="@string/add_new_category"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuItemAddNewBilling"
        android:icon="@drawable/ic_money"
        android:orderInCategory="2"
        android:title="@string/add_new_payment"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuItemScanQr"
        android:icon="@drawable/ic_qr_code"
        android:orderInCategory="3"
        android:title="@string/scan_qr"
        app:showAsAction="ifRoom" />
</menu>