<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNewPayment">

    <LinearLayout
        android:id="@+id/layoutType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txtViewType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:text="@string/type"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="3"
            android:dropDownWidth="200dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txtViewCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:text="@string/category"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="3"
            android:dropDownWidth="200dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txtViewAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="2"
            android:text="@string/amount"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTxtAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="3"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/amount_hint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txtViewNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:text="@string/note"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTxtNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/note_hint"
            android:inputType="textMultiLine" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_new_payment"
        android:textColor="@color/colorTextIcons"
        android:textSize="16sp"
        android:onClick="SubmitPayment" />

</LinearLayout>